--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
     align-items: center;
 }
 .button { 
-    padding:20px 40px 20px 40px;
+    padding:15px 50px 15px 50px;
     margin:25px;
 }
 
@@ -39,5 +39,6 @@
 
 #dayTrack {
     align-self: flex-start;
-    margin-left: 3px;
+    margin-top: -20px;
+    margin-left: 10px;
 }
