--- a/styles/require.css
+++ b/styles/require.css
@@ -1,10 +1,10 @@
 h1 {
-    color: #495867;
+    color: #993955;
     text-shadow:
-    -1px -1px 0 #FE5F55,
-    1px -1px 0 #FE5F55,
-    -1px 1px 0 #FE5F55, 
-    1px 1px 0 #FE5F55;   
+    -1px -1px 0 #AE76A6,
+    1px -1px 0 #AE76A6,
+    -1px 1px 0 #AE76A6, 
+    1px 1px 0 #AE76A6;   
 }
 
 section {
@@ -22,4 +22,26 @@ section {
 
 #bananaGif:hover {
     content: url(../images/3903678.png);
+}
+
+#transform1 {
+    height:100px;
+    width: 100px;
+    background-color: #AE76A6;
+    opacity: 1;
+    transition: background-color 1s ease-in-out;
+}
+#transform1:hover {
+    background-color: black;
+}
+
+#transform2 {
+    height:100px;
+    width: 100px;
+    background-color: #A3C3D9;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+}
+#transform2:hover {
+    opacity:0;
 }
