--- a/styles/styleRoutine.css
+++ b/styles/styleRoutine.css
@@ -109,7 +109,8 @@ input[type='checkbox'] {
 #helpCreateP {
     margin:0;
     padding-top: 1px;
-    text-align: center;
+    align-self: center;
+    display:none
 }
 
 #bounds {
@@ -123,6 +124,6 @@ input[type='checkbox'] {
     border-radius: 10px;
 }
 
-form {
+#actionForm {
     align-self: center;
 }
