--- a/styles/styleRoutine.css
+++ b/styles/styleRoutine.css
@@ -131,3 +131,24 @@ input[type='checkbox'] {
 #actionForm {
     align-self: center;
 }
+
+#favPulse {
+    position: absolute;
+}
+
+.pulsing {
+    animation: pulse .5s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(.8);
+    }
+    50% {
+        transform: scale(.9);
+    }
+    100% {
+        transform: scale(.8);
+    }
+    
+}
