--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,15 @@ body{
     background-color: #fcbf49;
     border-radius: 5px;
 }
+/* #refresh { // clearWall() button 
+    font-size: xx-large;
+    width: 30px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-self:flex-end;
+} */
 
 #buttonCase, #hiddenCase {
     display: flex;
