--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -67,6 +67,12 @@ body{
     display: flex;
     align-self:flex-end;
 } */
+.moveGroup {
+    background-color: #fcbf49;
+    padding: 10px;
+    border-radius:10px;
+    margin:10px;
+}
 
 #buttonCase, #hiddenCase {
     display: flex;
@@ -75,6 +81,17 @@ body{
     justify-content: center ;
     margin: 10px;
     height: 350px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+#historyCase {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center ;
+    margin: 10px;
+    height: 560px;
     border: 1px solid black;
     border-radius: 10px;
 }
