--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -57,6 +57,7 @@ body{
     margin-bottom: 5%;
     background-color: #fcbf49;
     border-radius: 5px;
+    padding: 3px;
 }
 /* #refresh { // clearWall() button 
     font-size: xx-large;
@@ -94,6 +95,9 @@ body{
     height: 560px;
     border: 1px solid black;
     border-radius: 10px;
+    justify-content: flex-start; 
+    overflow-y: auto; 
+    padding-top: 20px;
 }
 
 #dayTrack {
